components/support/error/tests/returns_result_but_not_error.stderr
error[E0277]: the trait bound `String: GetErrorHandling` is not satisfied
  --> tests/returns_result_but_not_error.rs:30:2
   |
30 |  #[handle_error(ExternalError)]
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `GetErrorHandling` is not implemented for `String`
   |
   = help: the trait `GetErrorHandling` is implemented for `Error`
note: required by a bound in `convert_log_report_error`
  --> src/handling.rs
   |
   |     IE: GetErrorHandling<ExternalError = EE> + std::error::Error,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `convert_log_report_error`
   = note: this error originates in the attribute macro `handle_error` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `String: std::error::Error` is not satisfied
  --> tests/returns_result_but_not_error.rs:30:2
   |
30 |  #[handle_error(ExternalError)]
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::error::Error` is not implemented for `String`
   |
note: required by a bound in `convert_log_report_error`
  --> src/handling.rs
   |
   |     IE: GetErrorHandling<ExternalError = EE> + std::error::Error,
   |                                                ^^^^^^^^^^^^^^^^^ required by this bound in `convert_log_report_error`
   = note: this error originates in the attribute macro `handle_error` (in Nightly builds, run with -Z macro-backtrace for more info)
